Все фиксы с ревью внесены

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <!-- навигация по сайту -->
         <ul class="nav-list">
           <li>
-            <a class="no-deco-link" href="/">главная</a>
+            <a class="nav-link-header no-deco-link" href="/">главная</a>
           </li>
           <li class="list-deco">
-            <a class="link-active" href="/lots">посмотреть лоты</a>
+            <a class="nav-link-header link-active" href="/lots">посмотреть лоты</a>
           </li>
           <li class="list-deco">
-            <a class="link-active" href="/about">об аукционе</a>
+            <a class="nav-link-header link-active" href="/about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -207,10 +207,10 @@
         <!-- навигация по сайту -->
         <ul class="no-deco">
           <li>
-            <a class="no-deco-link" href="/">главная</a>
+            <a class="nav-link-footer no-deco-link" href="/">главная</a>
           </li>
-          <li class="margin-top"><a href="/lots">посмотреть лоты</a></li>
-          <li class="margin-top"><a href="/about">об аукционе</a></li>
+          <li class="nav-link-footer link-nav margin-top"><a href="/lots">посмотреть лоты</a></li>
+          <li class="nav-link-footer link-nav margin-top"><a href="/about">об аукционе</a></li>
         </ul>
       </nav>
 
