Перепуш, т.к. почему-то не все перенеслось

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           <li>
             <a class="nav-link-footer no-deco-link" href="/">главная</a>
           </li>
-          <li class="nav-link-footer link-nav margin-top"><a href="/lots">посмотреть лоты</a></li>
-          <li class="nav-link-footer link-nav margin-top"><a href="/about">об аукционе</a></li>
+          <li class="nav-link-footer margin-top"><a href="/lots">посмотреть лоты</a></li>
+          <li class="nav-link-footer margin-top"><a href="/about">об аукционе</a></li>
         </ul>
       </nav>
 
